# micro-market-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml
docs/: architecture.md  idea_review.md  research.md  roadmap.md  spec.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AiAnalyst.tsx  ConfigPanel.tsx  EducationalSidebar.tsx  ErrorBoundary.tsx  OrderBook.tsx  PnLDashboard.tsx  PriceChart.tsx  TradeTape.tsx
frontend/src/components/landing/: AboutSection.tsx  AgentsSection.tsx  ContactSection.tsx  CtaSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LondonClock.tsx  (+3 more)
frontend/src/contexts/: LondonClockContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/pages/: LandingPage.tsx  ModulePage.tsx  SimulationApp.tsx  SimulationsIndex.tsx
frontend/src/services/: groqService.ts
notebooks/: analysis.ipynb
scripts/: run_simulation.py
server/: .env.example  Dockerfile  index.html  main.py  manager.py  models.py  pyproject.toml  requirements.txt
server/mini_jane_street/: config.py  exchange.py  market_maker.py  orderbook.py
src/mini_jane_street/: __init__.py  analytics.py  entities.py  exchange.py  market_maker.py  matching_engine.py  simulation.py  traders.py
tests/: conftest.py  test_analytics.py  test_api.py  test_exchange.py  test_market_maker.py  test_matching_engine.py  test_matching_engine_integration.py  test_orderbook.py  test_simulation.py  test_traders.py
