[project]
name = "mini-jane-street-simulator"
version = "0.1.0"
description = "A realistic trading simulation platform demonstrating market microstructure concepts"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "websockets>=12.0",
    "sortedcontainers>=2.4.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
]
